mailscripts (0.13-1) UNRELEASED; urgency=medium

  * notmuch-extract-patch: add -v/--reroll-count option (Closes: #944418).

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 09 Nov 2019 15:01:23 -0700

mailscripts (0.12-1) unstable; urgency=medium

  * email-print-mime-structure: make typesafe.
    Thanks to Daniel Kahn Gillmor for the patch.
  * email-print-mime-structure: add capability to decrypt message parts
    (Closes: #943959).
    Thanks to Daniel Kahn Gillmor for the patch series.

  * mailscripts.el:
    - new defcustom: mailscripts-extract-patches-branch-prefix
    - new commands:
      + notmuch-extract-thread-patches-projectile
      + notmuch-extract-message-patches{,-projectile}
    - if user does not enter a branch name, use current HEAD.
  * elpa-mailscripts now depends on elpa-projectile.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 06 Nov 2019 20:54:56 -0700

mailscripts (0.11-1) unstable; urgency=medium

  * New script: email-print-mime-structure (Closes: #939993).
    Imported from the notmuch project, which never installed it.
    Thanks to Daniel Kahn Gillmor for the patches.
  * Generate nroff output in UTF-8.
    Thanks to Daniel Kahn Gillmor for the patch.
  * Use 'https' instead of 'http' in various places (Closes: #939994).
    Thanks to Daniel Kahn Gillmor for the patch.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 15 Sep 2019 08:13:41 -0700

mailscripts (0.10-1) unstable; urgency=medium

  * New script: email-extract-openpgp-certs(1) (Closes: #932993).
    Thanks to Daniel Kahn Gillmor for the patch.
  * Add CONTRIBUTING.rst.
  * d/copyright: completely new scripts may use any DFSG-compatible license.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 30 Jul 2019 13:25:36 +0100

mailscripts (0.9-1) unstable; urgency=medium

  * Fix docstring for notmuch-extract-thread-patches not to say that the
    target branch must not yet exist.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 14 Jul 2019 15:58:46 +0100
